# install-vulkan-sdk-action

./: .gitignore  CHANGELOG.md  README.md  action.yml  biome.json  jest.config.cjs  jest.config.js  package-lock.json  package.json  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  check-dist.yml  cleanup-workflows.yml
src/: archive.ts  downloader.ts  errors.ts  github.ts  http.ts  inputs.ts  installer.ts  installer_lavapipe.ts  installer_swiftshader.ts  installer_vulkan.ts  main.ts  platform.ts  verify.ts  versions.ts  versions_rasterizers.ts  versions_vulkan.ts  windows.ts
tests/: archive.test.ts  downloader.test.ts  error.test.ts  github.test.ts  http.test.ts  input.test.ts  installer_lavapipe.test.ts  installer_swiftshader.test.ts  installer_vulkan.test.ts  jest.setup.ts  main.test.ts  platform.test.ts  verify.test.ts  versions.test.ts  versions_rasterizers.test.ts  versions_vulkan.test.ts  windows.test.ts
tests/__mocks__/: cache.ts  core.ts  http-client.ts  tool-cache.ts
tests/integration/: CMakeLists.txt  main.cpp
